Tue Feb 10 23:44:53 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (struct recvfrom_arg): use struct
	  sockaddr_storage.
	  (recvfrom_blocking): follow struct recvfrom_arg change.
	  (s_recvfrom): ditto.
	  (s_recvfrom_nonblock): use struct sockaddr_storage.

	* ext/socket/socket.c (sock_accept): use struct sockaddr_storage.
	  (sock_accept_nonblock): ditto.
	  (sock_sysaccept): ditto.

	* ext/socket/ancdata.c (bsock_recvmsg_internal): use struct
	  sockaddr_storage.

Tue Feb 10 23:30:32 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getpeername): use struct
	  sockaddr_storage.
	  (bsock_local_address): ditto.
	  (bsock_remote_address): ditto.

Tue Feb 10 21:26:33 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.udp_server_sockets): new method.
	  (Socket.udp_server_loop_on): new method.
	  (Socket.udp_server_loop): new method
	  (Socket.ip_sockets_port0): extracted from tcp_server_sockets_port0.
	  (Socket::UDPSource): new class.

Tue Feb 10 21:14:43 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sockaddr_obj): fill pfamily.

Tue Feb 10 21:09:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_s_bool): new method.
	  (sockopt_bool): new method.

Tue Feb 10 20:58:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_family_m): renamed from sockopt_family.
	  (sockopt_level_m): renamed from sockopt_level.
	  (sockopt_optname_m): renamed from sockopt_optname.
	  (inspect_local_peercred): follow the renaming.
	  (Init_sockopt): ditto.

Tue Feb 10 20:56:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_creds): refactored to avoid
	  a rb_str_cat2 call.

Tue Feb 10 04:34:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (when): makes parentheses balanced.

Tue Feb 10 01:28:49 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ip_cmsg_type_to_sym): renamed from
	  cmsg_type_to_sym.
