@@ -826,7 +826,10 @@ sock_sysaccept(VALUE sock)
 static VALUE
 sock_gethostname(VALUE obj)
 {
-    char buf[1024];
+#ifndef HOST_NAME_MAX
+#  define HOST_NAME_MAX 1024
+#endif
+    char buf[HOST_NAME_MAX+1];
 
     rb_secure(3);
     if (gethostname(buf, (int)sizeof buf - 1) < 0)
